FIX activity overflow

--- a/src/app/shared/components/activity/activity.component.scss
+++ b/src/app/shared/components/activity/activity.component.scss
@@ -36,6 +36,10 @@
   .activity_content {
     display: flex;
 
+    .single {
+      max-width: 100%;
+      word-wrap: break-word;
+    }
   }
   .activity_actions {
     display: flex;
